--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>First website on Internet </h1>
     <p>Good after, My name is Rohan Bajirao Patnge , I am from Hingoli Distric ,
         Currentely studing in Babasaheb Naik Colage Of Engineering, Pusad </p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Virat_Kohli_during_the_India_vs_Aus_4th_Test_match_at_Narendra_Modi_Stadium_on_09_March_2023.jpg"  height="400px">
         
     
 </body>
