--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <h1>First website on Internet </h1>
-    <p>Good after, My name is Rohan Bajirao Patnge , I am from Hingoli Distric ,
+    <p>Good after, My name is Rohan Bajirao Patange , I am from Hingoli Distric ,
         Currentely Studing in Babasaheb Naik Colage Of Engineering, Pusad </p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Virat_Kohli_during_the_India_vs_Aus_4th_Test_match_at_Narendra_Modi_Stadium_on_09_March_2023.jpg"  height="400px">
+    <div><img src="rohan.jpg" height="250vh" alt=""></div>
         
     
 </body>
